--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.5.0",
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
+    "concurrently": "^5.3.0",
     "json-server": "^0.16.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -27,7 +28,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "npx json-server --watch public/db.json --port=3001"
+    "server": "npx json-server --watch public/db.json --port=3001",
+    "start-server": "concurrently \"npm run server\" \"npm start\""
   },
   "eslintConfig": {
     "extends": [
