--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "npx json-server --watch public/db.json --port=3001",
-    "start-server": "concurrently \"npm run server\" \"npm start\""
+    "start-server": "concurrently \"npm run server\" \"npm start\"",
+    "stop": "pkill --signal SIGINT pica"
   },
   "eslintConfig": {
     "extends": [
