--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "https://api.clickup.com",
   "browserslist": {
     "production": [
       ">0.2%",
